Fixed master node selection. Fixed domain selection overflow

--- a/selam.css
+++ b/selam.css
@@ -30,8 +30,10 @@ html {
   }
   
   #contentPart {
+    width: 500px;
+    height: 350px;
     padding: 20px;
-    overflow-y: auto;
+    overflow: auto;
   }
   
   #footerButtons {
@@ -67,7 +69,7 @@ html {
   #logMessage {
     display: none;
   }
-  
+
   #buttonsContainer {
     margin-right: 135px;
     margin-top: 10px;
